--- a/Proxmox/tasks/instances/docker_lxc/media.yml
+++ b/Proxmox/tasks/instances/docker_lxc/media.yml
@@ -1,284 +1,62 @@
-- block:
-      - set_fact:
-            app_name: media
-            mapped_uid: '{{ instance.subuid | int + 1000 }}'
+- set_fact:
+      stack_name: media
 
-      - set_fact:
-            config:
-                root: '{{ env.JARVIS_CONFIGS_DIR }}/{{ app_name }}'
-                local: '{{ instance.configs }}/{{ app_name }}'
+- name: '{{ stack_name | upper }}: Create Library Directories'
+  vars:
+      mapped_uid: '{{ instance.subuid | int + 1000 }}'
+  file:
+      path: '{{ media_dir }}'
+      state: directory
+      mode: '0777'
+      owner: '{{ mapped_uid }}'
+      group: '{{ mapped_uid }}'
+  loop:
+      - '/mnt/ssd/Media'
+      - '/mnt/ssd/Media/Downloads'
+      - '/mnt/ssd/Media/Downloads/movies'
+      - '/mnt/ssd/Media/Downloads/tv'
+      - '/mnt/ssd/Media/Downloads/anime'
+      - '/mnt/ssd/Media/Movies'
+      - '/mnt/ssd/Media/TV'
+      - '/mnt/ssd/Media/Anime'
+  loop_control:
+      loop_var: media_dir
 
-      - name: '{{ app_name | upper }}: Configure Directories'
-        file:
-            path: '{{ dir_item }}'
-            state: directory
-            mode: '0777'
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            recurse: true
+- name: '{{ stack_name | upper }}: Deploy Provider Apps'
+  include_tasks: 'media/{{ media_app }}.yml'
+  loop:
+      - qbittorrent
+      - radarr
+      - sonarr
+      - sonarr_anime
+  loop_control:
+      loop_var: media_app
+
+- name: '{{ stack_name | upper }}: Extract Dependency API Keys'
+  block:
+      - name: '{{ stack_name | upper }}: Extract API Key'
+        shell: |
+            pct exec {{ id }} -- cat {{ instance.configs }}/media/{{ arr_item }}/config.xml | grep -oP '(?<=<ApiKey>)[^<]+'
         loop:
-            - '{{ config.root }}'
-            - '{{ config.root }}/prowlarr'
-            - '{{ config.root }}/radarr'
-            - '{{ config.root }}/sonarr'
-            - '{{ config.root }}/sonarr-anime'
-            - '{{ config.root }}/qbittorrent'
-            - '{{ config.root }}/bazarr'
-            - '{{ config.root }}/jellyseerr'
-        loop_control:
-            loop_var: dir_item
-
-      - name: '{{ app_name | upper }}: Create Media Library Directories'
-        file:
-            path: '{{ media_dir_item }}'
-            state: directory
-            mode: '0777'
-        loop:
-            - '/mnt/ssd/Media'
-            - '/mnt/ssd/Media/Downloads'
-            - '/mnt/ssd/Media/Downloads/movies'
-            - '/mnt/ssd/Media/Downloads/tv'
-            - '/mnt/ssd/Media/Downloads/anime'
-            - '/mnt/ssd/Media/Movies'
-            - '/mnt/ssd/Media/TV'
-            - '/mnt/ssd/Media/Anime'
-        loop_control:
-            loop_var: media_dir_item
-
-      - name: '{{ app_name | upper }}: Create docker-compose.yml'
-        copy:
-            dest: '{{ config.root }}/docker-compose.yml'
-            content: |-
-                services:
-                  prowlarr:
-                    container_name: prowlarr
-                    image: lscr.io/linuxserver/prowlarr:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                    ports:
-                      - 9696:9696
-                    volumes:
-                      - {{ config.local }}/prowlarr:/config
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "http://localhost:9696/ping"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-
-                  radarr:
-                    container_name: radarr
-                    image: lscr.io/linuxserver/radarr:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                    ports:
-                      - 7878:7878
-                    volumes:
-                      - {{ config.local }}/radarr:/config
-                      - /media/ssd/Media:/media
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "http://localhost:7878/ping"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-
-                  sonarr:
-                    container_name: sonarr
-                    image: lscr.io/linuxserver/sonarr:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                    ports:
-                      - 8989:8989
-                    volumes:
-                      - {{ config.local }}/sonarr:/config
-                      - /media/ssd/Media:/media
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "http://localhost:8989/ping"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-
-                  sonarr-anime:
-                    container_name: sonarr-anime
-                    image: lscr.io/linuxserver/sonarr:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                    ports:
-                      - 8990:8989
-                    volumes:
-                      - {{ config.local }}/sonarr-anime:/config
-                      - /media/ssd/Media:/media
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "http://localhost:8989/ping"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-
-                  qbittorrent:
-                    container_name: qbittorrent
-                    image: lscr.io/linuxserver/qbittorrent:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                      - WEBUI_PORT=8080
-                    ports:
-                      - 8080:8080
-                      - 6881:6881
-                      - 6881:6881/udp
-                    volumes:
-                      - {{ config.local }}/qbittorrent:/config/qBittorrent
-                      - /media/ssd/Media/Downloads:/downloads
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "http://localhost:8080"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-
-                  bazarr:
-                    container_name: bazarr
-                    image: lscr.io/linuxserver/bazarr:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                    ports:
-                      - 6767:6767
-                    volumes:
-                      - {{ config.local }}/bazarr:/config
-                      - /media/ssd/Media:/media
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "http://localhost:6767/api/system/status"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-
-                  jellyseerr:
-                    container_name: jellyseerr
-                    image: fallenbagel/jellyseerr:latest
-                    restart: unless-stopped
-                    security_opt:
-                      - no-new-privileges:true
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                    ports:
-                      - 5055:5055
-                    volumes:
-                      - {{ config.local }}/jellyseerr:/app/config
-                    healthcheck:
-                      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5055/api/v1/status"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            mode: '0666'
-
-      - name: '{{ app_name | upper }}: Cleanup Existing Containers'
-        command: pct exec {{ id }} -- bash -c "docker compose -f {{ config.local }}/docker-compose.yml down 2>/dev/null || true"
-        changed_when: false
-
-      - name: '{{ app_name | upper }}: Start Docker Compose'
-        command: pct exec {{ id }} -- bash -c "cd {{ config.local }} && docker compose up -d"
-        register: media_compose
-        changed_when: "'Created' in media_compose.stderr or 'Recreated' in media_compose.stderr"
-
-      - name: '{{ app_name | upper }}: Wait for Services to be Ready'
-        wait_for:
-            host: '{{ instance.ip }}'
-            port: '{{ env.JARVIS_SERVICES[service_item].port }}'
-            delay: 5
-            timeout: 120
-        loop:
-            - prowlarr
             - radarr
             - sonarr
             - sonarr-anime
-            - qbittorrent
-            - bazarr
-            - jellyseerr
         loop_control:
-            loop_var: service_item
-        ignore_errors: true
+            loop_var: arr_item
+        register: arr_keys
+        changed_when: false
+        failed_when: false
 
-      - name: '{{ app_name | upper }}: Configure Services'
-        include_tasks: 'media/{{ service_item }}.yml'
-        loop:
-            - qbittorrent
-            - grabber
-            - prowlarr
-            - bazarr
-            - jellyseerr
-        loop_control:
-            loop_var: service_item
+      - set_fact:
+            radarr_api: "{{ arr_keys.results[0].stdout | default('') }}"
+            sonarr_api: "{{ arr_keys.results[1].stdout | default('') }}"
+            sonarr_anime_api: "{{ arr_keys.results[2].stdout | default('') }}"
 
-  rescue:
-      - debug:
-            msg: '{{ app_name }} failed to deploy'
+- name: '{{ stack_name | upper }}: Deploy Consumer Apps'
+  include_tasks: 'media/{{ media_app }}.yml'
+  loop:
+      - prowlarr
+      - bazarr
+      - jellyseerr
+  loop_control:
+      loop_var: media_app
